# 5bw

./: .gitignore  CMakeLists.txt  build.bat  config.json  main.cpp  readme.txt
battle/: ability.cpp  ability.h  abilityManager.cpp  abilityManager.h  abilityPanel.cpp  abilityPanel.h  abilityUI.cpp  abilityUI.h  actionText.cpp  actionText.h  battleEntity.cpp  battleEntity.h  battleResources.cpp  battleResources.h  battleSystem.cpp  battleSystem.h  cardVfx.cpp  cardVfx.h  party.cpp  party.h  vfx.cpp  vfx.h  vfxManager.cpp  vfxManager.h
core/: game.cpp  game.h  state.h  stateMachine.cpp  stateMachine.h
entities/: nakedSprite.h  player.cpp  player.h  sprite.cpp  sprite.h
misc/: mapGenerator.cpp  mapGenerator.h
states/: battleState.cpp  battleState.h  gameState.cpp  gameState.h  mapState.cpp  mapState.h  menuState.cpp  menuState.h
